tests/compile_fail/invalid_type_enum.rs
use structconf::StructConf;

#[derive(StructConf)]
struct Enum {
    A,
    B,
}

fn main() {}
